@@ -1,67 +1,38 @@
 # aeron-rpc
 
-Синхронный request/response RPC поверх Aeron UDP для low-latency Java-систем.
-
 Synchronous request/response RPC over Aeron UDP for low-latency Java systems.
 
-Библиотека дает простой blocking API в стиле обычного `call()`, но внутри ориентирована на throughput, минимальные аллокации и предсказуемую задержку.
+The library keeps a blocking `call()` API while the transport path is tuned for:
 
-The library provides a simple blocking `call()` API while keeping the internals optimized for throughput, minimal allocations, and predictable latency.
+- low transport overhead
+- minimal allocations on the hot path
+- predictable latency for request/response workloads
+- safe concurrent callers
 
----
+## Why
 
-## Зачем это нужно / Why This Exists
+Many low-latency transports push users into async/reactive code even when the business flow is naturally request/response.
 
-Многие high-performance транспорты заставляют писать async/reactive код даже там, где бизнес-логика естественно выглядит как request/response.
+`aeron-rpc` is for the opposite case:
 
-Many high-performance transports force async/reactive code even when the business flow is naturally request/response.
+- you want Aeron UDP
+- you want a normal blocking API
+- you still care about microseconds
 
-Проект стремится дать:
+## Good Fit
 
-This project aims to provide:
+- internal low-latency services
+- trading / fintech / market-data style systems
+- request/response flows on controlled networks
+- systems where user code is easier to reason about synchronously
 
-* **Синхронный API / Synchronous API** - простая модель `call()`.
-* **Низкую задержку / Low latency** - ориентир на десятки микросекунд на localhost.
-* **Aeron transport** - UDP без HTTP-overhead.
-* **Подключаемую сериализацию / Pluggable serialization** - SBE, Kryo, Protobuf или raw bytes.
+## Not a Good Fit
 
----
+- large payload transfer as the main workload
 
-## Когда использовать / When to Use
+## Installation
 
-Хорошо подходит:
-
-Good fit:
-
-* внутренние microservices с жесткими требованиями к latency;
-* trading / fintech / market-data системы;
-* request/response сценарии, где важна простота API;
-* локальные или private-network сервисы, где инфраструктура контролируется пользователем.
-
-* internal microservices with strict latency requirements;
-* trading, fintech, and market-data systems;
-* request/response flows where API simplicity matters;
-* local or private-network services where infrastructure is controlled by the user.
-
-Не лучший выбор:
-
-Not a good fit:
-
-* передача больших payload-ов как основная задача;
-* публичные интернет-API без отдельного security-layer;
-* замена service mesh;
-* сценарии, где HTTP/gRPC удобнее важнее, чем latency.
-
-* large payload transfer as the main workload;
-* public internet APIs without a separate security layer;
-* service mesh replacement;
-* cases where HTTP/gRPC convenience matters more than latency.
-
----
-
-## Установка / Installation
-
-### Maven через GitVerse / Maven via GitVerse
+### Maven via GitVerse
 
 ```xml
 <repositories>
@@ -80,27 +51,9 @@ Not a good fit:
 </dependencies>
 ```
 
-### Maven через GitHub Packages / Maven via GitHub Packages
+### Maven via GitHub Packages
 
-GitHub Packages требует авторизацию даже для скачивания Maven-пакетов. Добавьте GitHub token с правом `read:packages` в Maven `settings.xml`.
-
-GitHub Packages requires authentication even for consuming Maven packages. Add a GitHub token with `read:packages` to Maven `settings.xml`.
-
-```xml
-<settings>
-    <servers>
-        <server>
-            <id>github</id>
-            <username>YOUR_GITHUB_USERNAME</username>
-            <password>YOUR_GITHUB_TOKEN</password>
-        </server>
-    </servers>
-</settings>
-```
-
-Затем добавьте GitHub Packages repository и dependency.
-
-Then add the GitHub Packages repository and dependency.
+GitHub Packages requires authentication even for reads. Add a token with `read:packages` to Maven `settings.xml`, then configure:
 
 ```xml
 <repositories>
@@ -122,19 +75,14 @@ Then add the GitHub Packages repository and dependency.
 </dependencies>
 ```
 
----
+## Requirements
 
-## Требования / Requirements
+- Java 25+
+- Maven 3.9+
 
-* Java 25+
-* Maven 3.9+
-* Aeron-compatible runtime environment
+## Quick Start
 
----
-
-## Быстрый старт / Quick Start
-
-### 1. Создать node / Create a node
+### Start a node
 
 ```java
 RpcNode node = RpcNode.start(
@@ -144,7 +92,7 @@ RpcNode node = RpcNode.start(
 );
 ```
 
-### 2. Создать channel / Create a channel
+### Create a channel
 
 ```java
 RpcChannel channel = node.channel(
@@ -156,7 +104,7 @@ RpcChannel channel = node.channel(
 );
 ```
 
-### 3. Зарегистрировать handler / Register a handler
+### Register a handler
 
 ```java
 channel.onRequest(
@@ -168,15 +116,11 @@ channel.onRequest(
 );
 ```
 
-### 4. Запустить channel / Start the channel
+### Start and call
 
 ```java
 channel.start();
-```
 
-### 5. Выполнить вызов / Make a call
-
-```java
 MyResponse response = channel.call(
         1,
         2,
@@ -186,124 +130,130 @@ MyResponse response = channel.call(
 );
 ```
 
----
+For full Java integration examples, including production-style configuration,
+reconnect handling, many-channel layouts, and a complete settings reference, see
+[`docs/JAVA_EXAMPLES.md`](docs/JAVA_EXAMPLES.md).
 
-## Основные понятия / Core Concepts
+## Core Concepts
 
-### RpcNode
+### `RpcNode`
 
-`RpcNode` владеет Aeron client, optional embedded MediaDriver, общим offload executor и списком открытых каналов.
+`RpcNode` owns:
 
-`RpcNode` owns the Aeron client, optional embedded MediaDriver, shared offload executor, and all opened channels.
+- the Aeron client
+- optional embedded `MediaDriver`
+- the shared offload executor
+- the shared receive poller
+- all channels created through that node
 
-### RpcChannel
+### `RpcChannel`
 
-`RpcChannel` - один двунаправленный RPC-канал: одна `Publication`, одна `Subscription`, один RX thread.
+`RpcChannel` is one bidirectional RPC transport pair:
 
-`RpcChannel` is one bidirectional RPC channel: one `Publication`, one `Subscription`, and one RX thread.
+- one `Publication`
+- one `Subscription`
+- its own pending-call registry
+- its own correlation flow
+- its own handler registry
 
-Вызовы из нескольких потоков безопасны. Ответы сопоставляются с запросами по transport correlation id, поэтому concurrent callers не получают чужие replies.
+Multiple caller threads are safe. Responses are matched by correlation id, so one caller cannot receive another caller's response.
 
-Calls from multiple threads are safe. Responses are matched to requests by transport correlation id, so concurrent callers do not receive each other's replies.
+### `MessageCodec`
 
-### MessageCodec
-
-`MessageCodec` - пользовательский слой сериализации.
-
-`MessageCodec` is the user-defined serialization layer.
+`MessageCodec<T>` is the user serialization layer.
 
 ```java
 interface MessageCodec<T> {
     int encode(T message, MutableDirectBuffer buffer, int offset);
-
     T decode(DirectBuffer buffer, int offset, int length);
 }
 ```
 
-### RawRequestHandler
+### `RawRequestHandler`
 
-`RawRequestHandler` - zero-alloc server path: handler получает raw bytes и заранее выделенный response buffer.
+`RawRequestHandler` is the low-level server path: raw request bytes in, raw response bytes out.
 
-`RawRequestHandler` is a zero-alloc server path: the handler receives raw bytes and a preallocated response buffer.
+Use it when you want tight control over allocations and serialization.
 
----
+## Current Transport Architecture
 
-## Конфигурация / Configuration
+Recent changes introduced a shared receive-poller design.
 
-Главные настройки: где выполняется handler, как idle-ит RX thread и что делать при backpressure.
+Instead of forcing one hot RX thread per channel, `RpcNode` can host a shared receive poller with multiple lanes. Each `RpcChannel` stays logically isolated, but receive polling can be shared across many channels on the same driver.
 
-The main choices are where the handler runs, how the RX thread idles, and what happens under backpressure.
+Important properties:
+
+- channels still keep isolated pending state
+- correlation safety is unchanged
+- one `Subscription` is never polled concurrently by multiple threads
+- empty RX lanes now park instead of burning CPU
+
+This matters especially for workloads with many channels on one `MediaDriver`.
+
+## Main Tuning Knobs
 
 ### Handler execution
 
-| Setting | Где выполняется / Where it runs | Когда использовать / Use when |
-|---------|----------------------------------|-------------------------------|
-| default, no `offloadExecutor` | virtual thread | handler делает I/O и не должен блокировать RX thread / handler does I/O and should not block RX |
-| `.offloadExecutor(myPool)` | custom `ExecutorService` | CPU-heavy handlers или свой scheduler / CPU-heavy handlers or custom scheduling |
-| `.offloadExecutor(ChannelConfig.DIRECT_EXECUTOR)` | прямо в RX thread / directly in RX thread | ultra-fast handlers, ACK, in-memory lookup |
+| Setting | Runs where | Use when |
+|---|---|---|
+| default | node default executor | normal blocking or I/O-heavy handlers |
+| `.offloadExecutor(myPool)` | your executor | custom scheduling / CPU-heavy work |
+| `.offloadExecutor(ChannelConfig.DIRECT_EXECUTOR)` | directly in receive path | only for extremely fast handlers |
 
-`DIRECT_EXECUTOR` убирает payload copy и executor dispatch, но медленный handler блокирует прием сообщений.
-
-`DIRECT_EXECUTOR` skips payload copy and executor dispatch, but a slow handler blocks receive processing.
+`DIRECT_EXECUTOR` removes offload scheduling and payload copy, but a slow handler blocks receive progress.
 
 ### RX idle strategy
 
-| Strategy | CPU при idle / Idle CPU | Задержка после idle / Latency after idle | Когда использовать / Use when |
-|----------|--------------------------|-------------------------------------------|-------------------------------|
-| `YIELDING` | около одного ядра / about one core | минимальная / minimal | low-latency default |
-| `BUSY_SPIN` | одно ядро постоянно / one full core | минимальная, fastest hot loop / minimal, fastest hot loop | maximum latency tuning |
-| `BACKOFF` | низкая / low | может быть выше / can be higher | mostly-idle channels, CPU-sensitive hosts |
+| Strategy | Use when |
+|---|---|
+| `YIELDING` | low-latency default |
+| `BUSY_SPIN` | you are willing to burn a core for the hot path |
+| `BACKOFF` | mostly idle channels and CPU-sensitive hosts |
 
-### Backpressure
+### Reconnect strategy
 
-| Policy | Поведение / Behavior | Когда использовать / Use when |
-|--------|----------------------|-------------------------------|
-| `BLOCK` | caller ждет accept или `offerTimeout` / caller waits until accepted or timeout | обычный RPC / normal RPC |
-| `FAIL_FAST` | сразу `BackpressureException` / immediate `BackpressureException` | caller имеет retry/fallback |
+`ChannelConfig` now supports:
 
----
+- `ReconnectStrategy.FAIL_FAST` - old behavior, fail immediately if disconnected
+- `ReconnectStrategy.WAIT_FOR_CONNECTION` - wait until the existing publication/heartbeat becomes connected again
 
-## Рецепты / Recipes
+This does not recreate channels automatically. It only waits for the current Aeron path to come back before sending the request.
 
-### Минимальная задержка / Minimum latency
+Example:
 
 ```java
 ChannelConfig.builder()
-        .localEndpoint("...")
-        .remoteEndpoint("...")
+        .localEndpoint("localhost:40101")
+        .remoteEndpoint("localhost:40102")
         .streamId(1001)
-        .offloadExecutor(ChannelConfig.DIRECT_EXECUTOR)
-        .rxIdleStrategy(IdleStrategyKind.BUSY_SPIN)
+        .reconnectStrategy(ReconnectStrategy.WAIT_FOR_CONNECTION)
         .build();
 ```
 
-### Обычный I/O handler / Typical I/O handler
+### Shared receive poller
+
+`NodeConfig` now supports:
+
+- `sharedReceivePoller(boolean)`
+- `sharedReceivePollerThreads(int)`
+- `sharedReceivePollerFragmentLimit(int)`
+
+Example:
 
 ```java
-ChannelConfig.builder()
-        .localEndpoint("...")
-        .remoteEndpoint("...")
-        .streamId(1002)
-        .rxIdleStrategy(IdleStrategyKind.YIELDING)
-        .build();
+RpcNode node = RpcNode.start(
+        NodeConfig.builder()
+                .aeronDir("/tmp/aeron")
+                .sharedReceivePoller(true)
+                .sharedReceivePollerThreads(2)
+                .sharedReceivePollerFragmentLimit(16)
+                .build()
+);
 ```
 
-### Mostly-idle channel
+For many channels on one host, this is often better than spinning one dedicated RX thread per channel.
 
-```java
-ChannelConfig.builder()
-        .localEndpoint("...")
-        .remoteEndpoint("...")
-        .streamId(1003)
-        .rxIdleStrategy(IdleStrategyKind.BACKOFF)
-        .build();
-```
-
----
-
-## Тесты и документация / Tests and Documentation
-
-Запустить unit tests:
+## Testing
 
 Run unit tests:
 
@@ -311,281 +261,38 @@ Run unit tests:
 mvn test
 ```
 
-Запустить полный verification lifecycle, включая tests, sources jar и Javadoc jar:
+Notable coverage now includes:
 
-Run the full verification lifecycle, including tests, sources jar, and Javadoc jar:
-
-```bash
-mvn clean verify
-```
-
-Сгенерировать Javadoc:
-
-Generate Javadoc:
-
-```bash
-mvn javadoc:javadoc
-```
-
-Javadoc будет создан в:
-
-Javadoc is written to:
-
-```text
-target/reports/apidocs
-```
-
-На Java 25 для Agrona требуется доступ к internal API. Для unit tests это уже настроено в Maven Surefire.
-
-On Java 25, Agrona requires access to internal APIs. This is already configured for unit tests through Maven Surefire.
-
-```text
---add-exports java.base/jdk.internal.misc=ALL-UNNAMED
-```
-
----
+- concurrent correlation correctness
+- IO-like offloaded handlers across multiple channels and threads
+- reconnect wait strategy
 
 ## Benchmarks
 
-Убедитесь, что Maven использует JDK 25.
+The old benchmark section in this README was replaced with the current standalone latency workflow.
 
-Make sure Maven runs on JDK 25.
+See:
 
-```bash
-mvn -version
-```
+- [`docs/BENCHMARKS.md`](docs/BENCHMARKS.md)
+- [`docs/JAVA_EXAMPLES.md`](docs/JAVA_EXAMPLES.md)
 
-На Windows PowerShell, если Maven использует старый JDK, задайте `JAVA_HOME` для текущей сессии.
+That document contains:
 
-On Windows PowerShell, if Maven uses an older JDK, set `JAVA_HOME` for the current session.
+- current benchmark commands
+- parameter explanations
+- `OFFLOAD + YIELDING` examples
+- multi-channel and multi-thread scenarios
+- IO-like handler scenarios
+- Java integration examples for application code
+- notes about comparison with raw Aeron
 
-```powershell
-$env:JAVA_HOME = "PATH_TO_JDK_25"
-$env:Path = "$env:JAVA_HOME\bin;$env:Path"
-mvn -version
-```
+## Limitations
 
-Собрать JMH benchmark jar:
+- no automatic channel recreation
+- default max payload is 16 MiB
+- `DIRECT_EXECUTOR` can block receive progress
+- auth, encryption, and authorization belong to the application or infrastructure layer
 
-Build the JMH benchmark jar:
-
-```bash
-mvn -Pbenchmarks -DskipTests clean package
-```
-
-Запустить все RPC benchmarks:
-
-Run all RPC benchmarks:
-
-```bash
-java --add-exports java.base/jdk.internal.misc=ALL-UNNAMED -jar target/aeron-rpc-benchmarks.jar RpcChannelBenchmark
-```
-
-Запустить один сценарий:
-
-Run one focused scenario:
-
-```bash
-java --add-exports java.base/jdk.internal.misc=ALL-UNNAMED -jar target/aeron-rpc-benchmarks.jar RpcChannelBenchmark.oneChannelEightThreads
-```
-
-Ограничить параметры:
-
-Limit parameters:
-
-```bash
-java --add-exports java.base/jdk.internal.misc=ALL-UNNAMED -jar target/aeron-rpc-benchmarks.jar RpcChannelBenchmark.oneChannelEightThreads -p handlerMode=DIRECT -p payloadSize=256 -p idleStrategy=YIELDING
-```
-
-Сравнить RX idle strategies:
-
-Compare RX idle strategies:
-
-```bash
-java --add-exports java.base/jdk.internal.misc=ALL-UNNAMED -jar target/aeron-rpc-benchmarks.jar RpcChannelBenchmark.oneChannelEightThreads -p idleStrategy=YIELDING,BUSY_SPIN,BACKOFF
-```
-
-Запустить rate-controlled RTT latency benchmark, похожий на Aeron echo benchmark:
-
-Run a rate-controlled RTT latency benchmark similar to the Aeron echo benchmark:
-
-```bash
-java --add-exports java.base/jdk.internal.misc=ALL-UNNAMED -cp target/aeron-rpc-benchmarks.jar ru.pathcreator.pyc.bench.RpcLatencyHistogramMain --payload=32 --rate=100000 --threads=1 --burst-size=1 --warmup-iterations=5 --warmup-messages=25000 --measurement-iterations=10 --measurement-messages=100000 --handler=OFFLOAD --idle=YIELDING
-```
-
-Этот benchmark измеряет полный synchronous RPC round-trip: `RpcChannel.call(...)` отправляет запрос, server echo handler возвращает payload, caller получает и декодирует ответ. Режим closed-loop: один in-flight request на caller thread.
-
-This benchmark measures the full synchronous RPC round trip: `RpcChannel.call(...)` sends a request, the server echo handler returns the payload, and the caller receives and decodes the response. It is closed-loop: one in-flight request per caller thread.
-
-| Option | Meaning |
-|--------|---------|
-| `--payload` | request and response payload size in bytes |
-| `--rate` | target total request rate across all caller threads |
-| `--threads` | number of concurrent caller threads |
-| `--burst-size` | messages sent by each caller thread per pacing interval |
-| `--handler` | `DIRECT` or `OFFLOAD` server handler execution |
-| `--idle` | RX idle strategy: `YIELDING`, `BUSY_SPIN`, or `BACKOFF` |
-
-Сохранить результат в CSV:
-
-Save results to CSV:
-
-```bash
-java --add-exports java.base/jdk.internal.misc=ALL-UNNAMED -jar target/aeron-rpc-benchmarks.jar RpcChannelBenchmark -rf csv -rff target/jmh-rpc.csv
-```
-
-В WSL/Linux используйте `/` в путях, например `target/aeron-rpc-benchmarks.jar`.
-
-In WSL/Linux, use `/` in paths, for example `target/aeron-rpc-benchmarks.jar`.
-
-### Benchmark parameters
-
-| Parameter | Values | Meaning |
-|-----------|--------|---------|
-| `handlerMode` | `DIRECT`, `OFFLOAD` | where server handlers run |
-| `payloadSize` | `16`, `256`, `1024` | request and response payload size |
-| `idleStrategy` | `YIELDING`, `BUSY_SPIN`, `BACKOFF` | RX thread idle strategy |
-
-### Reference benchmark results
-
-Это пример локального запуска в WSL на Java 25. Это ориентир, а не переносимая гарантия: результаты зависят от CPU, OS scheduler, power mode, MediaDriver placement и filesystem.
-
-These are example local results from a WSL run on Java 25. Treat them as a reference point, not as a portable guarantee: results depend on CPU, OS scheduler, power mode, MediaDriver placement, and filesystem.
-
-`Score` - throughput в operations per second. `Error` - не ошибка теста, а статистический confidence interval. Большой `Error` означает шумный результат.
-
-`Score` is throughput in operations per second. `Error` is not a test failure; it is the statistical confidence interval. A large `Error` means the result was noisy.
-
-| Benchmark | Handler | RX idle | Payload | Score, ops/s | Error, ops/s |
-|-----------|---------|---------|---------|--------------|--------------|
-| `fourChannelsEightThreadsEach` | DIRECT | YIELDING | 16 B | 61,407.683 | 9,502.823 |
-| `fourChannelsEightThreadsEach` | DIRECT | YIELDING | 256 B | 49,200.071 | 56,955.723 |
-| `fourChannelsEightThreadsEach` | DIRECT | YIELDING | 1024 B | 64,005.432 | 36,969.464 |
-| `fourChannelsEightThreadsEach` | DIRECT | BUSY_SPIN | 16 B | 77,975.351 | 10,021.085 |
-| `fourChannelsEightThreadsEach` | DIRECT | BUSY_SPIN | 256 B | 88,761.459 | 107,865.061 |
-| `fourChannelsEightThreadsEach` | DIRECT | BUSY_SPIN | 1024 B | 85,725.096 | 38,059.795 |
-| `fourChannelsEightThreadsEach` | DIRECT | BACKOFF | 16 B | 54,572.523 | 9,958.987 |
-| `fourChannelsEightThreadsEach` | DIRECT | BACKOFF | 256 B | 53,701.850 | 32,721.614 |
-| `fourChannelsEightThreadsEach` | DIRECT | BACKOFF | 1024 B | 64,984.427 | 22,871.002 |
-| `fourChannelsEightThreadsEach` | OFFLOAD | YIELDING | 16 B | 47,850.989 | 24,732.797 |
-| `fourChannelsEightThreadsEach` | OFFLOAD | YIELDING | 256 B | 38,428.156 | 8,847.332 |
-| `fourChannelsEightThreadsEach` | OFFLOAD | YIELDING | 1024 B | 49,100.813 | 53,337.230 |
-| `fourChannelsEightThreadsEach` | OFFLOAD | BUSY_SPIN | 16 B | 62,579.518 | 15,203.081 |
-| `fourChannelsEightThreadsEach` | OFFLOAD | BUSY_SPIN | 256 B | 44,528.867 | 37,385.968 |
-| `fourChannelsEightThreadsEach` | OFFLOAD | BUSY_SPIN | 1024 B | 61,105.251 | 76,631.469 |
-| `fourChannelsEightThreadsEach` | OFFLOAD | BACKOFF | 16 B | 43,451.862 | 9,035.131 |
-| `fourChannelsEightThreadsEach` | OFFLOAD | BACKOFF | 256 B | 38,047.466 | 6,368.076 |
-| `fourChannelsEightThreadsEach` | OFFLOAD | BACKOFF | 1024 B | 51,211.319 | 47,061.843 |
-| `oneChannelEightThreads` | DIRECT | YIELDING | 16 B | 454,729.955 | 244,878.842 |
-| `oneChannelEightThreads` | DIRECT | YIELDING | 256 B | 230,722.594 | 12,815.495 |
-| `oneChannelEightThreads` | DIRECT | YIELDING | 1024 B | 236,397.916 | 43,727.005 |
-| `oneChannelEightThreads` | DIRECT | BUSY_SPIN | 16 B | 282,136.430 | 39,527.653 |
-| `oneChannelEightThreads` | DIRECT | BUSY_SPIN | 256 B | 298,127.380 | 64,247.462 |
-| `oneChannelEightThreads` | DIRECT | BUSY_SPIN | 1024 B | 254,938.200 | 13,770.398 |
-| `oneChannelEightThreads` | DIRECT | BACKOFF | 16 B | 83,531.929 | 21,939.100 |
-| `oneChannelEightThreads` | DIRECT | BACKOFF | 256 B | 97,467.152 | 39,229.694 |
-| `oneChannelEightThreads` | DIRECT | BACKOFF | 1024 B | 145,545.016 | 35,216.105 |
-| `oneChannelEightThreads` | OFFLOAD | YIELDING | 16 B | 145,612.182 | 27,664.428 |
-| `oneChannelEightThreads` | OFFLOAD | YIELDING | 256 B | 140,335.127 | 21,444.443 |
-| `oneChannelEightThreads` | OFFLOAD | YIELDING | 1024 B | 127,947.144 | 22,790.599 |
-| `oneChannelEightThreads` | OFFLOAD | BUSY_SPIN | 16 B | 137,504.890 | 41,220.196 |
-| `oneChannelEightThreads` | OFFLOAD | BUSY_SPIN | 256 B | 133,542.345 | 32,919.160 |
-| `oneChannelEightThreads` | OFFLOAD | BUSY_SPIN | 1024 B | 135,113.223 | 28,632.751 |
-| `oneChannelEightThreads` | OFFLOAD | BACKOFF | 16 B | 49,856.387 | 4,628.959 |
-| `oneChannelEightThreads` | OFFLOAD | BACKOFF | 256 B | 50,740.938 | 2,239.948 |
-| `oneChannelEightThreads` | OFFLOAD | BACKOFF | 1024 B | 49,546.680 | 879.996 |
-| `oneChannelOneThread` | DIRECT | YIELDING | 16 B | 186,904.075 | 6,926.592 |
-| `oneChannelOneThread` | DIRECT | YIELDING | 256 B | 182,500.107 | 6,742.407 |
-| `oneChannelOneThread` | DIRECT | YIELDING | 1024 B | 168,516.496 | 12,630.781 |
-| `oneChannelOneThread` | DIRECT | BUSY_SPIN | 16 B | 189,722.932 | 2,501.386 |
-| `oneChannelOneThread` | DIRECT | BUSY_SPIN | 256 B | 184,005.769 | 3,727.608 |
-| `oneChannelOneThread` | DIRECT | BUSY_SPIN | 1024 B | 167,798.554 | 2,143.439 |
-| `oneChannelOneThread` | DIRECT | BACKOFF | 16 B | 19,800.224 | 2,735.737 |
-| `oneChannelOneThread` | DIRECT | BACKOFF | 256 B | 20,936.170 | 20,567.851 |
-| `oneChannelOneThread` | DIRECT | BACKOFF | 1024 B | 16,980.122 | 4,493.010 |
-| `oneChannelOneThread` | OFFLOAD | YIELDING | 16 B | 139,926.312 | 19,629.895 |
-| `oneChannelOneThread` | OFFLOAD | YIELDING | 256 B | 141,598.614 | 16,001.812 |
-| `oneChannelOneThread` | OFFLOAD | YIELDING | 1024 B | 125,358.303 | 13,997.795 |
-| `oneChannelOneThread` | OFFLOAD | BUSY_SPIN | 16 B | 143,182.508 | 23,719.307 |
-| `oneChannelOneThread` | OFFLOAD | BUSY_SPIN | 256 B | 139,550.293 | 8,069.328 |
-| `oneChannelOneThread` | OFFLOAD | BUSY_SPIN | 1024 B | 124,440.943 | 20,101.422 |
-| `oneChannelOneThread` | OFFLOAD | BACKOFF | 16 B | 10,474.733 | 738.089 |
-| `oneChannelOneThread` | OFFLOAD | BACKOFF | 256 B | 10,522.227 | 738.932 |
-| `oneChannelOneThread` | OFFLOAD | BACKOFF | 1024 B | 10,484.348 | 586.815 |
-
-### Как читать результаты / How to Read the Results
-
-* `DIRECT` лучше для очень быстрых handlers, потому что убирает offload queueing и payload copy.
-* `OFFLOAD` безопаснее для blocking или slow handlers, потому что защищает RX thread от пользовательского кода.
-* `YIELDING` - хороший low-latency default.
-* `BUSY_SPIN` может быть немного быстрее в hot loop, но постоянно расходует CPU.
-* `BACKOFF` экономит CPU при idle, но может снизить throughput и увеличить latency после idle.
-* Больше каналов не всегда означает больше throughput в одном процессе: RX threads, embedded MediaDriver и OS scheduler могут стать bottleneck.
-
-* `DIRECT` is best for very fast handlers because it avoids offload queueing and payload copy.
-* `OFFLOAD` is safer for blocking or slow handlers because it protects the RX thread from user code.
-* `YIELDING` is a good low-latency default.
-* `BUSY_SPIN` can be slightly faster in hot loops, but it burns CPU continuously.
-* `BACKOFF` saves CPU while idle, but can reduce throughput and add latency after idle periods.
-* More channels do not always mean more throughput in one process: RX threads, embedded MediaDriver, and the OS scheduler can become bottlenecks.
-
-### I/O handler recommendation
-
-Для I/O-bound handlers используйте `OFFLOAD + YIELDING`.
-
-For I/O-bound handlers, use `OFFLOAD + YIELDING`.
-
-`OFFLOAD` не дает blocking user code остановить RX thread, а `YIELDING` остается хорошим low-latency default для receive loop.
-
-`OFFLOAD` keeps blocking user code away from the RX thread, while `YIELDING` remains a good low-latency default for the receive loop.
-
-По benchmark-ам на 1024-byte payload ожидаемый transport overhead:
-
-Based on the 1024-byte benchmark results, the expected transport overhead is approximately:
-
-* `~8 us` на round-trip с одним caller thread / per round-trip with one caller thread;
-* `~60-65 us` average round-trip latency с восемью concurrent caller threads / with eight concurrent caller threads.
-
-Реальная работа с database, HTTP, filesystem или сетью добавляется сверху.
-
-Real database, HTTP, filesystem, or network work should be added on top.
-
----
-
-## Дизайн производительности / Performance Design
-
-* Нет sender thread: caller напрямую вызывает `tryClaim` на `ConcurrentPublication`.
-* `tryClaim` fast-path для сообщений `<= maxPayloadLength`; `offer` fallback для больших сообщений.
-* Thread-local direct staging buffers.
-* Pooled `PendingCall`, `OffloadTask` и copy buffers.
-* Primitive maps без boxing.
-* 3-phase sync wait: spin, yield, park.
-* MediaDriver в `SHARED` threading mode.
-
-* No sender thread: caller invokes `tryClaim` directly on a `ConcurrentPublication`.
-* `tryClaim` fast path for messages `<= maxPayloadLength`; `offer` fallback for larger messages.
-* Thread-local direct staging buffers.
-* Pooled `PendingCall`, `OffloadTask`, and copy buffers.
-* Primitive maps without boxing.
-* 3-phase sync wait: spin, yield, park.
-* MediaDriver uses `SHARED` threading mode.
-
----
-
-## Ограничения / Limitations
-
-* Нет auto-reconnect; channel fail-fast через heartbeat.
-* Default max payload: 16 MiB.
-* `DIRECT_EXECUTOR` блокирует RX thread на время handler-а.
-* Библиотека не предоставляет authentication, authorization или encryption; это зона ответственности приложения или инфраструктуры.
-
-* No auto-reconnect; the channel fails fast through heartbeat.
-* Default max payload: 16 MiB.
-* `DIRECT_EXECUTOR` blocks the RX thread while the handler runs.
-* The library does not provide authentication, authorization, or encryption; these belong to the application or infrastructure layer.
-
----
-
-## Лицензия / License
+## License
 
 Apache License 2.0
